# CMakeList.txt : CMake project for MiscProblems, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ReverseArray "ReverseArray.cpp")
add_executable (MergeSortedArrays "MergeSortedArrays.cpp")
add_executable(TwoSum "TwoSum.cpp")

# TODO: Add tests and install targets if needed.
