# CMakeList.txt : CMake project for MiscProblems, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (DoublePointer "DoublePointer.cpp")
add_executable (SinglePointer "SinglePointer.cpp")
add_executable (VectorMatrix "VectorMatrix.cpp")
# TODO: Add tests and install targets if needed.
